@@ -24,7 +24,7 @@
 #ifndef lint
 static  char sccsid[] = "@(#)s_misc.c	2.39 27 Oct 1993 (C) 1988 University of Oulu, \
 Computing Center and Jarkko Oikarinen";
-static char *rcs_version = "$Id: s_misc.c,v 1.19 1999/02/16 06:04:42 db Exp $";
+static char *rcs_version = "$Id: s_misc.c,v 1.20 1999/03/15 20:58:30 db Exp $";
 #endif
 
 #include <sys/time.h>
@@ -755,12 +755,18 @@ static	void remove_dependents(aClient *cptr,
        * WALLOPS here only if we're "deflecting" a SQUIT
        * that hasn't hit its target  -orabidoo
        */
+      /* The WALLOPS isn't needed here as pointed out by
+       * comstud, since m_squit already does the notification.
+       */
+#ifdef 0
       if (to != cptr &&	/* not to the originator */
 	  to != sptr->from && /* not to the destination */
 	  cptr != sptr->from	/* hasn't reached target */
 	  && sptr->servptr != &me) /* not mine [done in m_squit] */
 	sendto_one(to, ":%s WALLOPS :Received SQUIT %s from %s (%s)",
 		   me.name, sptr->name, get_client_name(from, FALSE), comment);
+
+#endif
       if ((aconf = to->serv->nline))
 	strncpyzt(myname, my_name_for_link(me.name, aconf), HOSTLEN+1);
       else
